tests/errors/WriteUndeclaredScalar.imp
VAR
  a
BEGIN
  WRITE b;
END
